# animetta

./: .dockerignore  .env.example  .env.notifier  .env.wsl.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CUsers30262AppDataLocalTempopencodememe_output.txt  DESIGN.md  Dockerfile  Dockerfile.cuda  RAG_ORAL_MEMORY_PLAN.md  README.md  REFACTOR_PLAN.md  TESTING.md  ZEABUR.md  anima.py  cov_report.json  docker-compose.cpu.yml  docker-compose.yml  eval_prompts.txt  eval_results.json  fly.toml  pyproject.toml  requirements.txt  smoke-test.js  test_tools_config.py  zeabur.json
.claude/: settings.local.json
.playwright-mcp/: anima-page-snapshot.md  page-2026-04-30T11-53-55-563Z.yml
.understand-anything/: .understandignore  fingerprints.json  meta.json
config/: bilibili.yaml  config.yaml  observability.yaml  services-examples.yaml  services.yaml  singing.yaml  tools.yaml
design-system/: .cursorrules  CLAUDE.md  README.md  USAGE.md  brand.html  colors.html  colors_and_type.css  components.html  iconography.html  spacing.html  typography.html  ui-kit.html
docker/: build-frontend.sh  entrypoint.sh  nginx.conf
docs/: CLEANUP_PLAN.md  LANGGRAPH_MIGRATION_COMPLETE.md  LANGGRAPH_MIGRATION_PROGRESS.md  ORAL_MEMORY_WORKER.md  README.md  TOOLS.md  deployment.md  docker-deployment.md  gpt-sovits-rtx5090-setup.md  rag-evaluation-report.md  rvc-training-guide.md
evaluations/: AGENTS.md
frontend/: .env.production  .eslintrc.json  .gitignore  AGENTS.md  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm.approve.json  smoke-test.mjs  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
memory_db/: memories.db
observability/: Dockerfile.notifier  alertmanager.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.yaml
scripts/: README.md  bench.py  benchmark.py  check_deps.py  collect-voice.py  collect_voice_data.py  demucs_fix.py  download-models.sh  download_chattts.py  download_funasr_models.py  download_live2d_model.py  eval_llm.py  fix_test_imports.py  fix_test_name_errors.py  migrate_fuzzy_to_wiki.py  prepare_alice_rvc_data.py  process-icons.py  rvc_train.py  rvc_train_alice.py  seed-persona.py  setup_env.py  setup_vibevoice.py  start.py  start_mc_bot.bat  start_mc_bot.py  stop.py  switch_env.py  test.bat  test_backend.py  test_chat.py  test_chat_simple.py  test_expression_stability.py  test_langfuse.py  test_llm_config.py  test_meme_collector.py  test_oral_worker.py  test_singing_pipeline.py  train.py  transcribe_alice.py  verify_chattts.py  (+2 more)
tests/: conftest.py  test_bilibili_meme_intelligence.py  test_main_path.py  test_meme_review_page.py  test_memory_entry_store.py  test_memory_evolution.py  test_minecraft_bridge.py  test_minecraft_bridge_simple.py  test_minecraft_tools.py  (+6 more)
(+1802 files in other folders)
