[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anima"
version = "0.1.0"
description = "AI virtual companion / VTuber framework with Live2D avatar support"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as asyncio",
    "integration: mark as integration test (requires external services)",
    "slow: mark test as slow and potentially hanging (skipped in default CI run)",
]
addopts = "-v --tb=short -n auto -m \"not slow\""

[tool.coverage.run]
source = ["src/anima"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
